added query driver arg for clangd

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,9 @@
         "streambuf": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "clangd.arguments": [
+        "--query-driver=${env:HOME}/Documents/Projects/pinetime/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-*",
+        "--compile-commands-dir=build"
+    ]
 }
